Made additional changes to Evolve client